<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.contactlist.MainActivity">

    <EditText
        android:id="@+id/firstNameET"
        android:hint="@string/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/lastNameET"
        android:hint="@string/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:src="@mipmap/empty_contact_img"
        android:id="@+id/contactImgView"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="150dp" />

    <Button
        android:id="@+id/photoBtn"
        android:text="@string/photoBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/saveBtn"
        android:text="@string/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/listBtn"
        android:text="@string/listBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
